k8s/namespaces/base/kube-system/sealed-secrets/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sealed-secrets
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'sealed-secrets.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 8080
            host: sealed-secrets.kube-system.svc.cluster.local
